added writing to BQ and alternative as windowedWrites to GCS